# pico-fusion

./: Cargo.toml  README.md
data/: deliveries.parquet  picodata_seed.sql
queries/: deliveries.sql  join.sql  pico_user.sql
src/: generate_parquet.rs  main.rs
