[package]
name = "pico-fusion"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
datafusion = "40.0.0"
env_logger = "0.11.3"
futures = "0.3.30"
itertools = "0.13.0"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
